--- a/Modelo-Predição de Desmoronamentos.ipynb
+++ b/Modelo-Predição de Desmoronamentos.ipynb
@@ -22,7 +22,9 @@
     }
    ],
    "source": [
-    "print('onde está isso')"
+    "print('onde está isso')\n",
+    "print('Agora essa parada vai rodar')\n",
+    "# Aula de git"
    ]
   }
  ],
@@ -42,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
