Agora vai - Nova branch: Desmoronamento e comentários sobre códigos Git

--- a/Modelo-Predição de Desmoronamentos.ipynb
+++ b/Modelo-Predição de Desmoronamentos.ipynb
@@ -35,7 +35,8 @@
     "# git checkout nomedabranch -> para andar entre as branchs (versões)\n",
     "# git pull -> para baixar arquivo do github\n",
     "# git merge nome_do_branch -> juntar a branch atual na branch nomeada no código\n",
-    "# git rebase nome_do_branch -> puxa toda a história do branch informada para dentro do branch atual e soma tudo\n"
+    "# git rebase nome_do_branch -> puxa toda a história do branch informada para dentro do branch atual e soma tudo\n",
+    "#  git push --set-upstream origin Desmoronamento -> adiciona branch \"Desmoronamento\" no GitHub"
    ]
   }
  ],
