--- a/Modelo-Predição de Desmoronamentos.ipynb
+++ b/Modelo-Predição de Desmoronamentos.ipynb
@@ -36,7 +36,12 @@
     "# git pull -> para baixar arquivo do github\n",
     "# git merge nome_do_branch -> juntar a branch atual na branch nomeada no código\n",
     "# git rebase nome_do_branch -> puxa toda a história do branch informada para dentro do branch atual e soma tudo\n",
-    "#  git push --set-upstream origin Desmoronamento -> adiciona branch \"Desmoronamento\" no GitHub"
+    "#  git push --set-upstream origin Desmoronamento -> adiciona branch \"Desmoronamento\" no GitHub\n",
+    "# git -> sistema de versionamento de códigos (arquivos)\n",
+    "# github -> plataforma parecida com uma rede social para programadores. Área para colaboração entre programadores\n",
+    "# git config --global user.name \"Seu nome de exibição\" -> Para configurar o git na máquina com nome do usuário igual ao do github\n",
+    "# git config --global user.email \"seu email\" -> para configurar o git na máquina com e-mail cadastrado no github\n",
+    "# git -v -> apresenta a versão do git instalado na máquina "
    ]
   }
  ],
@@ -56,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
