Adicionado código cd

--- a/Modelo-Predição de Desmoronamentos.ipynb
+++ b/Modelo-Predição de Desmoronamentos.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,10 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "print('onde está isso')\n",
     "print('Agora essa parada vai rodar')\n",
+    "\n",
     "# Aula de git\n",
     "\n",
     "# git add . -> para adicionar novos arquivos na git\n",
@@ -41,7 +43,8 @@
     "# github -> plataforma parecida com uma rede social para programadores. Área para colaboração entre programadores\n",
     "# git config --global user.name \"Seu nome de exibição\" -> Para configurar o git na máquina com nome do usuário igual ao do github\n",
     "# git config --global user.email \"seu email\" -> para configurar o git na máquina com e-mail cadastrado no github\n",
-    "# git -v -> apresenta a versão do git instalado na máquina "
+    "# git -v -> apresenta a versão do git instalado na máquina \n",
+    "# cd -> comando usado para andar entre as pastas (diretórios da máquina)"
    ]
   }
  ],
@@ -61,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
