Mais alguns códigos git 19.01.23 21h13

--- a/Modelo-Predição de Desmoronamentos.ipynb
+++ b/Modelo-Predição de Desmoronamentos.ipynb
@@ -44,7 +44,10 @@
     "# git config --global user.name \"Seu nome de exibição\" -> Para configurar o git na máquina com nome do usuário igual ao do github\n",
     "# git config --global user.email \"seu email\" -> para configurar o git na máquina com e-mail cadastrado no github\n",
     "# git -v -> apresenta a versão do git instalado na máquina \n",
-    "# cd -> comando usado para andar entre as pastas (diretórios da máquina)"
+    "# cd -> comando usado para andar entre as pastas (diretórios da máquina)\n",
+    "# git revert código_do_log -> voltar para a versão indicada no código do log\n",
+    "# git log --oneline -> log (históricos) de ações em uma linha\n",
+    "# git log -> log completo"
    ]
   }
  ],
